# FirtstYearSCE

./: README.md
ASP.NET MVC Project/Manga Reader/: Manga Reader.sln  Web.config
DNS Lookup With Pthreads (ThreadPool) c++/: MyQueue.cpp  MyQueue.h  README  Request.h  SharedMemory.cpp  SharedMemory.h  Task.h  TaskDumper.cpp  TaskDumper.h  TaskRequester.cpp  TaskRequester.h  TaskResolver.cpp  TaskResolver.h  ThreadPool.cpp  ThreadPool.h  main.cpp  results.txt
FirstYearA/Ex4/: Dictionary.c
FirstYearA/Ex5/: ex5.c
FirstYearB/Ex4/: CDate.cpp  CDate.h  Candy.cpp  Candy.h  Cookie.cpp  (+14 more)
Linux/WebService project/final_project/project/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  configure.scan  libtool
Linux/WebService project/final_project/project/autom4te.cache/: output.0  output.1  output.4  output.5  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
Linux/WebService project/final_project/project/lib/: libmyutil.la  libmyutil.so.0.0.0
Linux/WebService project/final_project/project/src/: Makefile  Makefile.am  Makefile.in
Linux/WebService project/final_project/project/src/tic_tac_toe/: Makefile  Makefile.am  Makefile.in  tic_tac_toe.cpp  tic_tac_toe.hpp
Linux/WebService project/final_project/project/src/tic_tac_toe/.deps/: tic_tac_toe-tic_tac_toe.Po
Linux/WebService project/final_project/project/src/util/: Makefile  Makefile.am  Makefile.in  util.cpp  util.hpp
Linux/WebService project/final_project/project/src/util/.deps/: libmyutil_la-util.Plo
SecondYearPython/: HM4_321274524_316870252.py
(+172 files in other folders)
